--- a/rca/static_src/sass/components/_video-modal.scss
+++ b/rca/static_src/sass/components/_video-modal.scss
@@ -11,7 +11,7 @@
     pointer-events: none;
     transition: opacity $transition;
 
-    &.open {
+    &.is-open {
         opacity: 1;
         pointer-events: all;
     }
