--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -37,35 +37,36 @@
         </header>
 
         <div class="page__content">
-            
+
             {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.booking_bar %}
 
             <section class="section section--start bg bg--dark">
 
                 <div class="section__row programme-overview">
                     <header class="section__header grid">
-                        <h2 class="section__heading section__heading--primary heading heading--five" property="schema:description">
-                            {{ page.programme_description_title}}
-                        </h2>
+                        {% if page.introduction %}
+                            <h2 class="section__heading section__heading--primary heading heading--five" property="schema:description">
+                                {{ page.introduction }}
+                            </h2>
+                        {% endif %}
                     </header>
                     <div class="section__content grid">
                         <div class="programme-overview__key-details">
                             {% include "patterns/molecules/key-details/key-details.html" with course_type="short" %}
                         </div>
                         <div class="programme-overview__body">
-                            {% if page.programme_image %}
-                                {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.curriculum_video out_of_grid=True curriculum=False heading=False has_meta=False copy=False subheading=False image=page.curriculum_image %}
+                            {% if page.introduction_image %}
+                                {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.video out_of_grid=True curriculum=False heading=False has_meta=False copy=False subheading=False caption=page.video_caption video=page.video image=page.introduction_image %}
                             {% endif %}
                             <div class="programme-overview__description rich-text">
-                                {{ page.programme_description_copy|safe }}
+                                {{ page.body|safe }}
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="section__row short-course-accordion section__row--last">
-                    <h2 class="heading heading--two"></h2>
-                    {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.about_course_accordion title="About the course" course_type="short" %}
+                    {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.about title="About the course" course_type="short" %}
                 </div>
 
                 <div class="section__notch">
@@ -131,7 +132,7 @@
                 </div>
             </section>
 
-            
+
         </div>
 
     </div>
