--- a/rca/static_src/sass/components/_page.scss
+++ b/rca/static_src/sass/components/_page.scss
@@ -73,4 +73,21 @@
             }
         }
     }
+
+    .sticky-bar.app--short-course & {
+        #{$root}__header {
+            position: relative;
+            &::after {
+                content: '';
+                display: block;
+                position: absolute;
+                bottom: -91px;
+                left: 0;
+                width: 100%;
+                background-color: $color--black;
+                width: 100%;
+                height: 91px; // height of booking bar
+            }
+        }
+    }
 }
