--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -27,16 +27,18 @@
                         </div>
                 </div>
             </div>
-            {% if page.introduction %}
                 <div class="introduction grid">
-                    {% include "patterns/molecules/anchor-nav/anchor-nav.html" with anchor_nav=anchor_nav %}
+                    {% if anchor_nav %}
+                        {% include "patterns/molecules/anchor-nav/anchor-nav.html" with anchor_nav=anchor_nav %}
+                    {% endif %}
                     <div class="introduction__container">
+                    {% if page.introduction %}
                         <h2 class="introduction__text section__heading heading heading--five">
                             {{ page.introduction }}
                         </h2>
+                    {% endif %}
                     </div>
                 </div>
-            {% endif %}
         </header>
 
         <div class="page__content">
