--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -100,6 +100,8 @@
     }
 
     &__footer {
+        @include z-index(above-gridlines);
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -107,6 +109,20 @@
         border-style: solid;
         border-width: 1px 0 0;
         padding: ($gutter * 2) 0;
+        background-color: $color--white;
+
+        @include media-query(large) {
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                height: 1px;
+                background-color: $color--grid-line-dark;
+                width: 100%;
+                transform: translate3d(100%, -1px, 0);
+            }
+        }
     }
 
     &__button {
@@ -121,14 +137,28 @@
         padding-top: ($gutter * 2);
 
         @include media-query(large) {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
             height: 100%;
-            padding-top: 0;
+            padding-top: ($gutter * 7);
         }
 
         &__container {
             display: flex;
             justify-content: space-between;
             flex-direction: column;
+        }
+
+        &__content {
+            // Compensate for show results bar
+            padding-bottom: ($gutter * 3);
+
+            @include media-query(large) {
+                padding-bottom: ($gutter * 5);
+            }
         }
     }
 
@@ -196,7 +226,6 @@
             left: 0;
             width: 100%;
             padding: ($gutter / 2) $gutter;
-            background-color: $color--white;
             border-color: $color--grid-line-dark;
         }
 
