--- a/rca/static_src/sass/components/_filter-takeover.scss
+++ b/rca/static_src/sass/components/_filter-takeover.scss
@@ -10,10 +10,7 @@
     &__tab-content {
         height: calc(var(--vh, 1vh) * 100);
         overflow-y: scroll;
-
-        @include media-query(large) {
-            padding-top: ($gutter * 7);
-        }
+        overflow-x: hidden;
     }
 
     // Class added via js to body
