--- a/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
+++ b/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
@@ -17,9 +17,10 @@
         {% endif %}
 
         <div class="filter-tab-options__content">
-            {% for item in filter_options %}
+            {% for filter_item in filter_options %}
                 <div class="filter-tab-options__item layout__span-two layout__@large-span-one">
-                    <a href="#" class="filter-tab-options__link body body--one" data-filter-option>{{ item.title }}</a>
+                    <input type="checkbox" id="filter-{{ filter_item.id }}" name="{{ filter_item.title|slugify }}-{{ filter_item.id }}" value="{{ filter_item.id }}" {% if filter_item.active %}checked{% endif %} data-filter-option />
+                    <label class="filter-tab-options__link body body--one" for="filter-{{ filter_item.id }}">{{ filter_item.title }}</label>
                 </div>
             {% endfor %}
         </div>
