--- a/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--link.html
@@ -3,5 +3,5 @@
 {% is_external value.href value.url as is_external %}
 <a href="{% firstof value.href value.url %}" {% if is_external %} target="_blank" {% endif %}  class="link link--tertiary link--link {% if is_external %}link--external"{% endif %}>
     <span class="link__label">{% firstof value.text value.title %}</span>
-    <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="{% if is_external %}#external-arrow{% else %}#arrow{% endif %}"></use></svg>
+    <svg {% if is_external %}width="11" height="13"{% else %}width="12" height="8"{% endif %} class="link__icon" aria-hidden="true"><use xlink:href="{% if is_external %}#arrow-external{% else %}#arrow{% endif %}"></use></svg>
 </a>
