--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -124,6 +124,14 @@
                 transform: rotate(-45deg) translate3d(5px, 0, 0);
             }
         }
+
+        &#{$root}--external {
+            #{$root}__icon {
+                width: 11px;
+                height: 13px;
+                transform: rotate(0deg) translate3d(0, 0, 0);
+            }
+        }
     }
 
     &--up {
