--- a/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
+++ b/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
@@ -19,8 +19,8 @@
         <div class="filter-tab-options__content">
             {% for filter_item in filter_options %}
                 <div class="filter-tab-options__item layout__span-two">
-                    <input class="filter-tab-options__checkbox" type="checkbox" id="filter-{{ filter_item.id }}" name="{{ item.tab_title|slugify }}" value="{{ filter_item.id }}" {% if filter_item.active %}checked{% endif %} />
-                    <label class="filter-tab-options__link body body--one" for="filter-{{ filter_item.id }}" data-filter-option>{{ filter_item.title }}</label>
+                    <input class="filter-tab-options__checkbox" type="checkbox" id="filter-{{ item.filter_name }}-{{ filter_item.id }}" name="{{ item.filter_name }}" value="{{ filter_item.id }}" {% if filter_item.active %}checked{% endif %} />
+                    <label class="filter-tab-options__link body body--one {% if filter_item.active %}selected{% endif %}" for="filter-{{ item.filter_name }}-{{ filter_item.id }}" data-filter-option>{{ filter_item.title }}</label>
                 </div>
             {% endfor %}
         </div>
