--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_class %}
-    app--project-listing
+    app--project-listing no-hero
 {% endblock %}
 
 {% block content %}
